# GPT_2

./: .gitignore  README.md  download.sh  download_kaggle_dataset.py  extract_openwebtext.py  model.py  pyproject.toml  test.py  train.ipynb  train.py  train_pytorch.py
config/: train_gpt2.py  train_gpt2_kaggle.py  train_gpt2_mps.py
data/openwebtext/: prepare.py  prepare2.py
dataloader/: MyRequesrDataset.py  openWebTextDataSet.py
gpt_2/: pyproject.toml
model_gpt2/: gpt2.py  scheduler.py
util/: cpu.py  get_args.py  gpu.py  learning_rate.py  seed.py
