[tool.poetry]
name = "gpt2"
version = "0.1.0"
description = ""
authors = ["Linghua Zhang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "2.19.1"
wandb = "^0.19.2"
kagglehub = "^0.3.6"
tiktoken = "^0.8.0"
huggingface-hub = "^0.27.1"
torch = "2.5.0"
torchvision = "0.20.0"
transformers = "^4.48.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
